<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_brouser"
            android:icon="@drawable/baseline_public_black_48"
            android:title="@string/brows" />
        <item
            android:id="@+id/calculateFragment"
            android:icon="@drawable/calculate_black"
            android:title="@string/caclulator" />
        <item
            android:id="@+id/music"
            android:icon="@drawable/baseline_equalizer_black"
            android:title="@string/music"/>
        <item
            android:id="@+id/camera_"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera"/>
        <item
            android:id="@+id/recorder_"
            android:icon="@drawable/baseline_mic_black_48"
            android:title="@string/record" />
        <item
            android:id="@+id/preferences"
            android:icon="@drawable/baseline_settings_black_48"
            android:title="@string/preference" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/baseline_notes_black_48"
            android:title="@string/history" />
        <item
            android:id="@id/map2"
            android:icon="@drawable/baseline_map_black_48"
            android:title="@string/map"/>
        <item
            android:id="@+id/fr_network"
            android:icon="@drawable/baseline_wifi_black_48"
            android:title="@string/net" />
    </group>
</menu>